--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,36 @@
 language: android
 jdk: oraclejdk8
-sudo: false
-
-android:
-  components:
-    - android-28
-    - tools
-    - platform-tools
-    - build-tools-27.0.3
-    - android-23
-    - extra-android-m2repository
-    - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
 env:
   global:
-   # install timeout in minutes (2 minutes by default)
-   - ANDROID_TARGET=android-27
-   - ANDROID_ABI=armeabi-v7a
+    - ANDROID_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+android:
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+  components:
+    - tools
+    - platform-tools
+    # The BuildTools version used by your project
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    # The SDK version used to compile your project
+    - android-$ANDROID_API_LEVEL
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-google_apis-27
+    -t android-27
 
-
-# Run assemble, unit tests, and create coverage report
+before_script:
+  # Prepare pre-accepted licenses to not be promted at installation
+  - mkdir -p "$ANDROID_HOME/licenses"
+  - cp ./google-licenses/* "$ANDROID_HOME/licenses/"
+   - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
 script:
- - ./gradlew build jacocoTestReport assembleAndroidTest
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-  - ./gradlew connectedCheck
-
-  after_success:
-    - bash <(curl -s https://codecov.io/bash)
-#  - ./gradlew clean assembleDebug assembleRelease testDebug createDebugUnitTestCoverageReport
-#  # Renaming folder and files of reports so codecov.io can find it
-#  - mv app/build/reports/jacoco/createDebugUnitTestCoverageReport app/build/reports/jacoco/jacocoTestDebugUnitTestReport
-#  - mv app/build/reports/jacoco/jacocoTestDebugUnitTestReport/createDebugUnitTestCoverageReport.xml app/build/reports/jacoco/jacocoTestDebugUnitTestReport/jacocoTestDebugUnitTestReport.xml
-#  # Codecov.io
-#  - bash <(curl -s https://codecov.io/bash)
+  - ./gradlew build check
