--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: android
 jdk: oraclejdk8
+
 env:
   global:
     - ANDROID_API_LEVEL=25
     - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+
 android:
-  licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
   components:
     - tools
     - platform-tools
@@ -33,4 +31,5 @@ before_script:
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 script:
+  - chmod +x ./gradlew
   - ./gradlew build check
