--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
     - ANDROID_API_LEVEL=27
     - ANDROID_EMULATOR_LEVEL=18
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.1
+    - ANDROID_BUILD_TOOLS_VERSION=27.0.0
     - ADB_INSTALL_TIMEOUT=20
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
@@ -37,19 +37,15 @@ cache:
   - "$HOME/.android/build-cache"
 
 before_install:
-  - yes | sdkmanager "cmake;3.6.4111459"
-  - wget https://dl.google.com/android/repository/android-ndk-r17-linux-x86_64.zip
-  - unzip android-ndk-r17-linux-x86_64.zip -d $HOME > /dev/null
-  - export ANDROID_NDK_HOME=$HOME/android-ndk-r17
   - export PATH=$PATH:$ANDROID_NDK_HOME
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
 script:
-  - android list targets
-  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-  - emulator -avd test -no-window &
+#  - android list targets
+#  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+#  - emulator -avd test -no-window &
   - mkdir -p build/reports
   - ./gradlew assembleDebugAndroidTest -PdisablePreDex --continue --stacktrace
   - android-wait-for-emulator
