--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 sudo: false
 language: android
 jdk: oraclejdk8
+
 android:
   components:
     - android-28
     - build-tools-27.0.3
+
+before_cache:
+ - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+ - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
  directories:
