--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,37 @@
-sudo: false
-language: android
-jdk: oraclejdk8
-
-android:
-  components:
-    - android-27
-    - build-tools-27.0.3
-
-before_cache:
- - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
- - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
- directories:
- - $HOME/.gradle/caches/
- - $HOME/.gradle/wrapper/
-
-env:
-  global:
-   # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=20
-
-
-before_install:
-          - mkdir "$ANDROID_HOME/licenses" || true
-          - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-          - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-          - chmod +x ./gradlew
-
-# Run assemble, unit tests, and create coverage report
-script:
-   - ./gradlew clean
-   - ./gradlew build
+#sudo: false
+#language: android
+#jdk: oraclejdk8
+#
+#android:
+#  components:
+#    - android-27
+#    - build-tools-27.0.3
+#
+#before_cache:
+# - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+# - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+#
+#cache:
+# directories:
+# - $HOME/.gradle/caches/
+# - $HOME/.gradle/wrapper/
+#
+#env:
+#  global:
+#   # install timeout in minutes (2 minutes by default)
+#    - ADB_INSTALL_TIMEOUT=20
+#
+#
+#before_install:
+#          - mkdir "$ANDROID_HOME/licenses" || true
+#          - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+#          - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+#          - chmod +x ./gradlew
+#
+## Run assemble, unit tests, and create coverage report
+#script:
+#   - ./gradlew clean
+#   - ./gradlew build
 #   - ./gradlew assembleDebug
 #   - ./gradlew assembleDebugAndroidTest
 
@@ -41,6 +41,9 @@ script:
 #  - mv app/build/reports/jacoco/jacocoTestDebugUnitTestReport/createDebugUnitTestCoverageReport.xml app/build/reports/jacoco/jacocoTestDebugUnitTestReport/jacocoTestDebugUnitTestReport.xml
 #  # Codecov.io
 #  - bash <(curl -s https://codecov.io/bash)
+
+
+
 
 
 
@@ -99,3 +102,39 @@ script:
 #          - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 #          - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 #          - chmod +x gradlew
+
+language : android
+sudo : required
+jdk : oraclejdk8
+env:
+  global :
+    - ANROID_API_LEVEL = "27"
+    - ANDROID_BUILD_TOOLS_VERSION = "27.0.0"
+android :
+  components :
+    - tools
+    - platform-tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android - $ANDROID_API_LEVEL
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+  licences :
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+before_script :
+        - mkdir -p "$ANDROID_HOME/licenses"
+        - cp ./licenses/* "$ANDROID_HOME/licenses"
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
+script :
+    - ./gradlew build check
+before_install:
+- chmod +x gradlew
