--- a/.travis.yml
+++ b/.travis.yml
@@ -109,12 +109,11 @@ jdk : oraclejdk8
 env:
   global :
     - ANROID_API_LEVEL = "27"
-    - ANDROID_BUILD_TOOLS_VERSION = "27.0.0"
 android :
   components :
     - tools
     - platform-tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - tools
     - android - $ANDROID_API_LEVEL
     - extra-google-google_play_services
     - extra-google-m2repository
