--- a/.travis.yml
+++ b/.travis.yml
@@ -104,9 +104,11 @@
 #          - chmod +x gradlew
 
 language : android
+sudo: false
+
 env:
   global :
-    - ANROID_API_LEVEL = "26"
+    - ANROID_API_LEVEL = "27"
 
 #android :
 #  components :
@@ -124,8 +126,8 @@ env:
 
 android:
   components:
-    - build-tools-26.0.2
-    - android-26
+    - build-tools-27.1.1
+    - android-27
     - sys-img-armeabi-v7a-android-tv-l
     - add-on
     - extra
