--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,8 @@ sudo: false
 env:
   global :
     - ANROID_API_LEVEL = "27"
+    - EMULATOR_API_LEVEL=22
+
 
 #android :
 #  components :
@@ -139,7 +141,7 @@ android:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
