--- a/.travis.yml
+++ b/.travis.yml
@@ -140,11 +140,11 @@ android:
     - 'google-gdk-license-.+'
 
 # Emulator Management: Create, Start and Wait
-before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+#before_script:
+#  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+#  - emulator -avd test -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
