--- a/.travis.yml
+++ b/.travis.yml
@@ -109,7 +109,7 @@ sudo: false
 env:
   global :
     - ANROID_API_LEVEL = "27"
-    - EMULATOR_API_LEVEL=22
+    - EMULATOR_API_LEVEL=26
 
 
 #android :
@@ -146,17 +146,17 @@ android:
 #  - android-wait-for-emulator
 #  - adb shell input keyevent 82 &
 
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - $HOME/.android/build-cache
-
-script :
-    - ./gradlew build connectedCheck
-
-before_install:
-- chmod +x gradlew
+#before_cache:
+#  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+#  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+#cache:
+#  directories:
+#    - $HOME/.gradle/caches/
+#    - $HOME/.gradle/wrapper/
+#    - $HOME/.android/build-cache
+#
+#script :
+#    - ./gradlew build connectedCheck
+#
+#before_install:
+#- chmod +x gradlew
